Fix workflow reference to .mo files

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -112,7 +112,7 @@ jobs:
         with:
           # The arguments for the `git add` command (see the paragraph below for more info)
           # Default: '.'
-          add: "['**/*.mo', '**/*.po']"
+          add: "['**/*.po']"
 
           # Determines the way the action fills missing author name and email. Three options are available:
           # - github_actor -> UserName <UserName@users.noreply.github.com>
