--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -54,6 +54,10 @@ jobs:
           coverage: none
 
       - uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
