--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -277,6 +277,7 @@ $config = [
     'headers.security' => [
         'Content-Security-Policy' => "default-src 'none'; frame-ancestors 'self'; object-src 'none'; script-src 'self'; style-src 'self'; font-src 'self'; connect-src 'self'; img-src 'self' data:; base-uri 'none'",
         'Referrer-Policy' => 'origin-when-cross-origin',
+        'X-Content-Type-Options' => 'nosniff',
     ],
      */
 
