Partially restore pre-2.0 landing page functionality

--- a/modules/saml/routing/routes/routes.yml
+++ b/modules/saml/routing/routes/routes.yml
@@ -1,5 +1,12 @@
 ---
 
+sp-debug:
+  path: /sp/debug
+  defaults: {
+    _controller: 'SimpleSAML\Module\saml\Controller\Debug::debugsp'
+  }
+  methods: [GET, POST]
+
 saml-proxy-invalidSession:
   path: /proxy/invalidSession
   defaults: {
