--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           path: '**/*.md'
           check_filenames: true
-          ignore_words_list: tekst
+          ignore_words_list: tekst,widgits
 
   build:
     name: Build documentation
