Revert codespell to stable release

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,11 +28,12 @@ jobs:
           ignore_path: .markdownlintignore
 
       - name: Perform spell check
-        uses: codespell-project/actions-codespell@master
+        uses: codespell-project/actions-codespell@v2
         with:
           path: '**/*.md'
           check_filenames: true
-          ignore_words_list: tekst,Widgits
+          # Words must be lowercase
+          ignore_words_list: tekst,widgits
 
   build:
     name: Build documentation
