--- a/routing/services/simplesamlphp.yml
+++ b/routing/services/simplesamlphp.yml
@@ -3,22 +3,31 @@
 services:
   # default configuration for services in *this* file
   _defaults:
+    autowire: true
+    autoconfigure: true
     public: false
+    bind:
+      Psr\Log\LoggerInterface: '@SimpleSAML\Compat\Logger'
 
+  # Main SSP services
   SimpleSAML\Configuration:
     factory: ['SimpleSAML\Configuration', 'getInstance']
 
   SimpleSAML\Session:
     factory: ['SimpleSAML\Session', 'getSessionFromRequest']
 
+  ssp.auth_sources_config:
+    class: SimpleSAML\Configuration
+    factory: ['SimpleSAML\Configuration', 'getConfig']
+    arguments:
+      - 'authsources.php'
+
   SimpleSAML\Utils:
     class: SimpleSAML\Utils
     arguments:
-      - '@SimpleSAML\Configuration'
-      - '@SimpleSAML\Session'
+      $authSourcesConfig: '@ssp.auth_sources_config'
 
-  SimpleSAML\Auth\AuthenticationFactory:
-    class: SimpleSAML\Auth\AuthenticationFactory
-    arguments:
-      - '@SimpleSAML\Configuration'
-      - '@SimpleSAML\Session'
+  # Common SSP services
+  SimpleSAML\Auth\AuthenticationFactory: ~
+  SimpleSAML\Compat\Logger: ~
+  SimpleSAML\Module: ~
