Do not auto-rebuild translations on dev-branches

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -3,6 +3,7 @@ name: Build translations
 
 on:  # yamllint disable-line rule:truthy
   push:
+    branches: [master, simplesamlphp-*]
     paths:
       - '**.po'
       - '**.php'
