--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: [ubuntu-latest]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Lint markdown files
         uses: nosborn/github-action-markdown-cli@v3.2.0
@@ -28,7 +28,7 @@ jobs:
           ignore_path: .markdownlintignore
 
       - name: Perform spell check
-        uses: codespell-project/actions-codespell@master
+        uses: codespell-project/actions-codespell@v2
         with:
           path: '**/*.md'
           check_filenames: true
