--- a/composer.json
+++ b/composer.json
@@ -131,5 +131,5 @@
             "php bin/translations translations:update:binary"
         ]
     },
-    "version": "2.1.0-rc1"
+    "version": "2.1.0"
 }
