--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -91,8 +91,8 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: release-${{ matrix.version }}
-          path: "$TARGET"
+          path: "${{ env.VERSION }}"
           retention-days: 1
 
       - name: Calculate SHA checksum (${{ matrix.version }})
-        run: sha256sum "$TARGET"
+        run: sha256sum "${{ env.VERSION }}"
