Require ext-intl - It is used by twig/intl-extra but not enforced by their composer.json

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "ext-fileinfo": "*",
         "ext-filter": "*",
         "ext-hash": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-mbstring": "*",
