Use messages from legacy saml2-lib
This reverts a few minor things that were already rolled out in master
in all my enthousiasm

--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/saml2": "v5.0.0-alpha.13",
+        "simplesamlphp/saml2-legacy": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
         "simplesamlphp/xml-common": "^1.12",
