Drop ext-intl in favour of a polyfill

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -50,7 +50,7 @@ jobs:
           php-version: '8.2'
           tools: composer, composer-require-checker, composer-unused, phpcs, psalm
           # optional performance gain for psalm: opcache
-          extensions: ctype, date, dom, fileinfo, filter, hash, intl, json, mbstring, mysql, \
+          extensions: ctype, date, dom, fileinfo, filter, hash, json, mbstring, mysql, \
             opcache, openssl, pcre, pdo, pdo_sqlite, posix, soap, spl, xml
           coverage: none
 
@@ -80,7 +80,10 @@ jobs:
         run: composer-require-checker check --config-file tools/composer-require-checker.json composer.json
 
       - name: Check code for unused dependencies in composer.json
-        run: composer-unused --excludePackage=simplesamlphp/simplesamlphp-assets-base --excludePackage=ext-intl
+        run: |
+          composer-unused \
+          --excludePackage=simplesamlphp/simplesamlphp-assets-base \
+          --excludePackage=symfony/polyfill-intl-icu
 
       - name: PHP Code Sniffer
         run: phpcs
@@ -122,7 +125,7 @@ jobs:
         with:
           # Should be the lowest supported version
           php-version: '8.0'
-          extensions: ctype, date, dom, hash, fileinfo, filter, intl, json, mbstring, mysql, \
+          extensions: ctype, date, dom, hash, fileinfo, filter, json, mbstring, mysql, \
             openssl, pcre, pdo, pdo_sqlite, posix, soap, spl, xml
           tools: composer
           coverage: none
@@ -170,7 +173,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: ctype, date, dom, fileinfo, filter, hash, intl, json, mbstring, mysql, openssl, pcre,\
+          extensions: ctype, date, dom, fileinfo, filter, hash, json, mbstring, mysql, openssl, pcre,\
             pdo, pdo_sqlite, posix, soap, spl, xdebug, xml
           tools: composer
           ini-values: error_reporting=E_ALL, pcov.directory=.
@@ -233,7 +236,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: ctype, dom, date, fileinfo, filter, hash, intl, json, mbstring, mysql, openssl, pcre, \
+          extensions: ctype, dom, date, fileinfo, filter, hash, json, mbstring, mysql, openssl, pcre, \
             pdo, pdo_sqlite, posix, soap, spl, xdebug, xml
           tools: composer
           ini-values: error_reporting=E_ALL
