--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,6 @@
         "ext-date": "*",
         "ext-dom": "*",
         "ext-hash": "*",
-        "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
@@ -76,6 +75,7 @@
         "symfony/http-foundation": "^6.0",
         "symfony/http-kernel": "^6.0",
         "symfony/intl": "^6.0",
+        "symfony/polyfill-intl-icu": "^1.28",
         "symfony/routing": "^6.0",
         "symfony/translation-contracts": "^3.0",
         "tvdijen/twig-bridge": "^6.0",
@@ -98,6 +98,7 @@
     "suggest": {
         "predis/predis": "Needed if a Redis server is used to store session information",
         "ext-curl": "Needed in order to check for updates automatically",
+        "ext-intl": "Needed if translations for non-English languages are required.",
         "ext-ldap": "Needed if an LDAP backend is used",
         "ext-memcache": "Needed if a Memcache server is used to store session information",
         "ext-pdo": "Needed if a database backend is used, either for authentication or to store session information",
