--- a/composer.json
+++ b/composer.json
@@ -132,5 +132,5 @@
             "php bin/translations translations:update:binary"
         ]
     },
-    "version": "2.1.0"
+    "version": "v2.1.1"
 }
