--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Write release version
         run: |
           TAG="${{ github.ref_name }}"
+          echo "TAG=${TAG}" >> "$GITHUB_ENV"
           echo "VERSION=${TAG#v}" >> "$GITHUB_ENV"
           echo "COMPOSER_VERSION=$(composer config version)" >> "$GITHUB_ENV"
 
@@ -44,7 +45,7 @@ jobs:
         run: composer validate
 
       - name: Make sure a version is set in composer.json that matches the tag
-        if: "${{ env.COMPOSER_VERSION != env.VERSION }}"
+        if: "${{ env.COMPOSER_VERSION != env.TAG }}"
         run: exit 1
 
       - name: Install Composer dependencies
