--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "files": ["tests/_autoload_modules.php"]
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-date": "*",
         "ext-dom": "*",
         "ext-hash": "*",
@@ -65,22 +65,22 @@
         "simplesamlphp/composer-module-installer": "^1.3",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "~2.1.5",
-        "symfony/cache": "^6.0",
-        "symfony/config": "^6.0",
-        "symfony/console": "^6.0",
-        "symfony/dependency-injection": "^6.0",
-        "symfony/filesystem": "^6.0",
-        "symfony/finder": "^6.0",
-        "symfony/framework-bundle": "^6.0",
-        "symfony/http-foundation": "^6.0",
-        "symfony/http-kernel": "^6.0",
-        "symfony/intl": "^6.0",
+        "symfony/cache": "^6.4",
+        "symfony/config": "^6.4",
+        "symfony/console": "^6.4",
+        "symfony/dependency-injection": "^6.4",
+        "symfony/filesystem": "^6.4",
+        "symfony/finder": "^6.4",
+        "symfony/framework-bundle": "^6.4",
+        "symfony/http-foundation": "^6.4",
+        "symfony/http-kernel": "^6.4",
+        "symfony/intl": "^6.4",
         "symfony/polyfill-intl-icu": "^1.28",
-        "symfony/routing": "^6.0",
+        "symfony/routing": "^6.4",
         "symfony/translation-contracts": "^3.0",
-        "tvdijen/twig-bridge": "^6.0",
-        "symfony/var-exporter": "^6.0",
-        "symfony/yaml": "^6.0",
+        "symfony/twig-bridge": "^6.4",
+        "symfony/var-exporter": "^6.4",
+        "symfony/yaml": "^6.4",
         "twig/intl-extra": "^3.7",
         "twig/twig": "^3.5"
     },
@@ -93,7 +93,7 @@
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
         "simplesamlphp/simplesamlphp-test-framework": "^1.5.4",
         "simplesamlphp/xml-security": "^1.6.0",
-        "symfony/translation": "^6.0"
+        "symfony/translation": "^6.4"
     },
     "suggest": {
         "predis/predis": "Needed if a Redis server is used to store session information",
