--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
         "simplesamlphp/saml2-legacy": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.1.5",
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
-        "simplesamlphp/xml-common": "^1.12",
+        "simplesamlphp/xml-common": "^1.13",
         "symfony/cache": "^6.4",
         "symfony/config": "^6.4",
         "symfony/console": "^6.4",
@@ -100,7 +100,8 @@
 
         "gettext/php-scanner": "1.3.1",
         "mikey179/vfsstream": "~1.6",
-        "simplesamlphp/simplesamlphp-test-framework": "^1.5.4",
+        "predis/predis": "^2.2",
+        "simplesamlphp/simplesamlphp-test-framework": "^1.5",
         "simplesamlphp/xml-security": "^1.6.12",
         "symfony/translation": "^6.4"
     },
