--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -81,9 +81,11 @@ jobs:
 
       - name: Check code for unused dependencies in composer.json
         run: |
+          # symfony/yaml is required by Symfony routing to parse yml routing files
           composer-unused \
           --excludePackage=simplesamlphp/simplesamlphp-assets-base \
-          --excludePackage=symfony/polyfill-intl-icu
+          --excludePackage=symfony/polyfill-intl-icu \
+          --excludePackage=symfony/yaml
 
       - name: PHP Code Sniffer
         run: phpcs
