--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,8 @@
         "symfony/twig-bridge": "^6.4",
         "symfony/var-exporter": "^6.4",
         "twig/intl-extra": "^3.7",
-        "twig/twig": "^3.5"
+        "twig/twig": "^3.5",
+        "symfony/yaml": "^6.4"
     },
     "require-dev": {
         "ext-curl": "*",
