Remove unused use-statements and order them alphabetically

--- a/composer.json
+++ b/composer.json
@@ -123,7 +123,8 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "simplesamlphp/composer-module-installer": true,
-            "muglug/package-versions-56": true
+            "muglug/package-versions-56": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "extra": {
