--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/composer-module-installer": "^1.3",
-        "simplesamlphp/saml2": "v5.0.0-alpha.13",
+        "simplesamlphp/saml2": "^5.0.0-alpha.14",
         "simplesamlphp/saml2-legacy": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "^2.1.5",
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
