--- a/composer.json
+++ b/composer.json
@@ -107,7 +107,8 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "simplesamlphp/composer-module-installer": true,
-            "muglug/package-versions-56": true
+            "muglug/package-versions-56": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "version": "v2.0.8"
