--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,7 @@
 
         "gettext/php-scanner": "1.3.1",
         "mikey179/vfsstream": "~1.6",
+        "predis/predis": "^2.2",
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
         "simplesamlphp/simplesamlphp-test-framework": "^1.5.4",
         "simplesamlphp/xml-security": "^1.6.0",
