composer: install the deps so that the translation script can run

--- a/composer.json
+++ b/composer.json
@@ -127,6 +127,7 @@
         "translations:update:binary": "php bin/translations translations:update:binary",
         "translations:update:translatable": "php bin/translations translations:update:translatable",
         "post-install-cmd": [
+            "@composer update",
             "php bin/translations translations:update:binary"
         ],
         "post-update-cmd": [
