--- a/composer.json
+++ b/composer.json
@@ -65,22 +65,22 @@
         "simplesamlphp/composer-module-installer": "^1.3",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "~2.1.5",
-        "symfony/cache": "^6.0",
-        "symfony/config": "^6.0",
-        "symfony/console": "^6.0",
-        "symfony/dependency-injection": "^6.0",
-        "symfony/filesystem": "^6.0",
-        "symfony/finder": "^6.0",
-        "symfony/framework-bundle": "^6.0",
-        "symfony/http-foundation": "^6.0",
-        "symfony/http-kernel": "^6.0",
-        "symfony/intl": "^6.0",
+        "symfony/cache": "^6.0 <6.4",
+        "symfony/config": "^6.0 <6.4",
+        "symfony/console": "^6.0 <6.4",
+        "symfony/dependency-injection": "^6.0 <6.4",
+        "symfony/filesystem": "^6.0 <6.4",
+        "symfony/finder": "^6.0 <6.4",
+        "symfony/framework-bundle": "^6.0 <6.4",
+        "symfony/http-foundation": "^6.0 <6.4",
+        "symfony/http-kernel": "^6.0 <6.4",
+        "symfony/intl": "^6.0 <6.4",
         "symfony/polyfill-intl-icu": "^1.28",
-        "symfony/routing": "^6.0",
+        "symfony/routing": "^6.0 <6.4",
         "symfony/translation-contracts": "^3.0",
         "tvdijen/twig-bridge": "^6.0.20",
-        "symfony/var-exporter": "^6.0",
-        "symfony/yaml": "^6.0",
+        "symfony/var-exporter": "^6.0 <6.4",
+        "symfony/yaml": "^6.0 <6.4",
         "twig/intl-extra": "^3.7",
         "twig/twig": "^3.5"
     },
