NO MERGE: working from standard 2.2 to pr 1985 to see where CI is not happy

--- a/composer.json
+++ b/composer.json
@@ -126,12 +126,6 @@
     "scripts": {
         "translations:unused": "php bin/translations translations:unused",
         "translations:update:binary": "php bin/translations translations:update:binary",
-        "translations:update:translatable": "php bin/translations translations:update:translatable",
-        "post-install-cmd": [
-            "php bin/translations translations:update:binary"
-        ],
-        "post-update-cmd": [
-            "php bin/translations translations:update:binary"
-        ]
+        "translations:update:translatable": "php bin/translations translations:update:translatable"
     }
 }
