--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -4,6 +4,8 @@ name: Build translations
 on:  # yamllint disable-line rule:truthy
   push:
     branches: [master, simplesamlphp-*]
+    tags-ignore:
+      - '**'
     paths:
       - '**.po'
       - '**.php'
