Do not build translations on tag

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -3,6 +3,8 @@ name: Build translations
 
 on:  # yamllint disable-line rule:truthy
   push:
+    tags-ignore:
+      - '**'
     paths:
       - '**.po'
       - '**.php'
