Use more common proxy-config in example

--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -451,7 +451,7 @@ $config = [
      * Proxy to use for retrieving URLs.
      *
      * Example:
-     *   'proxy' => 'tcp://proxy.example.com:5100'
+     *   'proxy' => 'http://proxy.example.com:5100'
      */
     'proxy' => null,
 
