--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -15,17 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      #- uses: actions/setup-python@v4
-      #  with:
-      #    python-version: '3.10'
-
-      #- run: pip install lint-po
-
-      #- name: Lint PO(T) files
-      #  run: |
-      #    lint-po locales/*/LC_MESSAGES/*.po
-      #    lint-po modules/*/locales/*/LC_MESSAGES/*.po
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
+    
 
   build:
     name: Build PO-files
