--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -51,7 +51,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PAT_TOKEN }}
+          # token: ${{ secrets.PAT_TOKEN }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
 
