--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -51,7 +51,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          # token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
 
@@ -120,7 +120,7 @@ jobs:
           # - user_info -> Your Display Name <your-actual@email.com>
           # - github_actions -> github-actions <email associated with the github logo>
           # Default: github_actor
-#          default_author: github_actions
+          default_author: github_actions
 
           # The message for the commit.
           # Default: 'Commit from GitHub Actions (name of the workflow)'
