testing translation workflow6

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          branch: ${{ github.ref }}
+          branch: ${{ github.ref_name }}
         
   cleanup:
     name: Cleanup artifacts
