Fix Linter + CI clean job (#2128)
* Update eslint config

* Fix bugged cleanup-job

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -264,3 +264,21 @@ jobs:
 
       - name: Codecov
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
+
+  cleanup:
+    name: Cleanup artifacts
+    needs: [unit-tests-linux, coverage]
+    runs-on: [ubuntu-latest]
+    if: |
+      always() &&
+      needs.coverage.result == 'success' ||
+      (needs.unit-tests-linux.result == 'success' && needs.coverage.result == 'skipped')
+
+    steps:
+      - uses: geekyeggo/delete-artifact@v5
+        with:
+          name: coverage-data
