--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -287,6 +287,7 @@ $config = [
             "base-uri 'none'",
         'Referrer-Policy' => 'origin-when-cross-origin',
         'X-Content-Type-Options' => 'nosniff',
+        'Strict-Transport-Security: max-age=63072000; includeSubDomains',
     ],
      */
 
