A new config option to merge into headers.security for https only
I added getHeadersSecurity() to deal with the merging as this is read
in a few places. A new method seems like a good idea for a security
header rather than trying to special case inside the getOptionalArray() for
headers.security.

This will allow HSTS to be only used when https is in use. It may
break configurations that mix http and https but that is somewhat the
point of HSTS anyway. For testing one might set
headers.security.https.merge to an empty array to allow mixing
http/https in the redirection chain. For production one might like to
force HSTS to avoid accidential http requests.

--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -269,6 +269,9 @@ $config = [
 
     /*
      * Set custom security headers. The defaults can be found in \SimpleSAML\Configuration::DEFAULT_SECURITY_HEADERS
+     * and \SimpleSAML\Configuration::DEFAULT_SECURITY_HEADERS_HTTPS_MERGE.
+     * When a request is performed over https then the later is merged with
+     * DEFAULT_SECURITY_HEADERS.
      *
      * NOTE: When a header is already set on the response we will NOT overrule it and leave it untouched.
      *
@@ -287,6 +290,8 @@ $config = [
             "base-uri 'none'",
         'Referrer-Policy' => 'origin-when-cross-origin',
         'X-Content-Type-Options' => 'nosniff',
+    ],
+    'headers.security.https.merge' => [
         'Strict-Transport-Security: max-age=63072000; includeSubDomains',
     ],
      */
