this is just a test to see if it works

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
             "SimpleSAML\\Module\\exampleauth\\": "modules/exampleauth/src",
             "SimpleSAML\\Module\\multiauth\\": "modules/multiauth/src",
             "SimpleSAML\\Module\\saml\\": "modules/saml/src"
+            "SimpleSAML\\Module\\testsauthsource\\": ["modules/testsauthsource/src"]
         },
         "files": ["src/_autoload_modules.php"]
     },
