--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "symfony/var-exporter": "^6.4",
         "symfony/yaml": "^6.4",
         "twig/intl-extra": "^3.7",
-        "twig/twig": "^3.5"
+        "twig/twig": "^3.5",
+        "simplesamlphpmiq/simplesamlphp-module-testauthsource": "dev-master"
     },
     "require-dev": {
         "ext-curl": "*",
@@ -94,7 +95,6 @@
         "mikey179/vfsstream": "~1.6",
         "predis/predis": "^2.2",
         "simplesamlphp/simplesamlphp-module-adfs": "^2.1",
-        "simplesamlphpmiq/simplesamlphp-module-testauthsource": "dev-master",
         "simplesamlphp/simplesamlphp-test-framework": "^1.5.4",
         "symfony/translation": "^6.4"
     },
