--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "symfony/var-exporter": "^6.4",
         "symfony/yaml": "^6.4",
         "twig/intl-extra": "^3.7",
-        "twig/twig": "^3.5"
+        "twig/twig": "^3.5",
+        "simplesamlphpmiq/simplesamlphp-module-testauthsource": "dev-master"
     },
     "require-dev": {
         "ext-curl": "*",
