add some info about coverage in comments

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,6 +12,10 @@ on:  # yamllint disable-line rule:truthy
     paths-ignore:
       - '**.md'
 
+#      
+# Note that coverage data is generated on the php 8.1 ubuntu run.
+#
+      
 jobs:
   linter:
     name: Linter
