--- a/composer.json
+++ b/composer.json
@@ -122,12 +122,12 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0.x-dev"
+            "dev-master": "2.4.0.x-dev"
         }
     },
     "scripts": {
         "translations:unused": "php bin/translations translations:unused",
         "translations:update:translatable": "php bin/translations translations:update:translatable"
     },
-    "version": "2.3.0"
+    "version": "v2.3.0"
 }
