ci: update for composer plugins (#2247)

--- a/composer.json
+++ b/composer.json
@@ -126,7 +126,8 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "muglug/package-versions-56": true,
             "phpstan/extension-installer": true,
-            "simplesamlphp/composer-module-installer": true
+            "simplesamlphp/composer-module-installer": true,
+            "simplesamlphp/composer-xmlprovider-installer": true
         }
     },
     "extra": {
