--- a/composer.json
+++ b/composer.json
@@ -108,8 +108,10 @@
             "composer/package-versions-deprecated": true,
             "simplesamlphp/composer-module-installer": true,
             "muglug/package-versions-56": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "simplesamlphp/composer-xmlprovider-installer": true,
+            "phpstan/extension-installer": true
         }
     },
-    "version": "v2.0.13"
+    "version": "v2.0.14"
 }
